0. Stream API [#58166]